Added tag version + dimensions to cover metadata

--- a/todo.txt
+++ b/todo.txt
@@ -10,3 +10,5 @@
  - Abstract out glfw key events
  - split out file I/O etc to its own file
  - make a library watch daemon
+ - Videos with non-square pixels are poorly supported; video playback is letterboxed; thumbnails get squashed (IT crowd)
+ - Perhaps display multiple seasons in one menu? Separated by a text header?
