--- a/todo.txt
+++ b/todo.txt
@@ -13,3 +13,4 @@
  - Videos with non-square pixels are poorly supported; video playback is letterboxed; thumbnails get squashed (IT crowd)
  - Perhaps display multiple seasons in one menu? Separated by a text header?
  - copy better thumbnail generation from mkv-gencover
+ - clerk: too many levels of symlink (had a recursive symlink in video folder?)
