--- a/todo.txt
+++ b/todo.txt
@@ -16,3 +16,5 @@
  - Have clerk preserve state across renames
  - Have a look at performance, in particular drawing tiles (defer image/font rendering to render threads?)
  - Text objects that are hidden shouldn't render when their text is updated
+ - Dark mode should also postpone video position updates
+ - Add menu sleep timer
