--- a/todo.txt
+++ b/todo.txt
@@ -16,3 +16,4 @@
  - Text objects that are hidden shouldn't render when their text is updated
  - Dark mode should also postpone video position updates
  - Add menu sleep timer
+ - Better subtitle UI
