--- a/todo.txt
+++ b/todo.txt
@@ -26,3 +26,5 @@
  - Reinstate Tile objects? Maybe light objects until they are rendered?
  - Better deal with disappearing files/directories
  - Optimization: Don't render text if it's hidden
+ - Ending a video sometimes crashes with draw.py: 132: AttributeError: 'Quad' object has no attribute 'buffer_index'; this is likely due to video.py: eof_reached() calling drawing stuff out of main thread
+ - Last frame of video is briefly shown when playing new video (or for a long time if the video takes long to load)
